@@ -3,6 +3,7 @@
 == HEAD
 * Authorize.net: Allow settings to be passed for CIM purchases [fwilkins] #2300
 * Omise: Enable Japan, JPY and JCB support [zdk] #2284
+* Braintree Blue: Pass cardholder_name with card [curiousepic] #2324
 
 == Version 1.63.0 (February 2, 2017)
 * Authorize.net: Add #unstore support [jimryan] #2293
